#56 Rajout d'asserts qui manquaient encore